# Portunus

./: .gitignore  README.md  Taskfile.yml  project_plan.md
access_module/: .gitignore  CMakeLists.txt  README.md  nvs_config.example.csv  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.ci  sdkconfig.defaults.dev  sdkconfig.defaults.prod  sdkconfig.old  shared_secrets_setup.md
access_module/components/common/config/: CMakeLists.txt
access_module/components/common/config/include/: network_config.h  pin_config.h  security_config.h  timing_config.h
access_module/components/common/types/: CMakeLists.txt
access_module/components/common/types/include/: credential_types.h  error_codes.h  event_types.h  (+1 more)
access_module/components/door_strike/include/: door_strike.h
access_module/components/door_strike/src/: door_strike.cpp
access_module/components/drivers/mfrc522/: CMakeLists.txt
access_module/components/http_client/include/: http_client.h
access_module/components/mfrc522/include/: mfrc522.h
access_module/components/portunus_clock/: CMakeLists.txt
access_module/components/portunus_clock/include/: esp_timer_clock.hpp
access_module/components/portunus_clock/src/: esp_timer_clock.cpp
access_module/components/portunus_config/: CMakeLists.txt
access_module/components/portunus_config/include/: network_config.h  network_config.hpp  pin_config.hpp  security_config.h  security_config.hpp  timing_config.hpp
access_module/components/portunus_interfaces/: CMakeLists.txt
access_module/components/portunus_interfaces/include/: i_access_point.h  i_access_point.hpp  i_arm.h  i_arm.hpp  i_clock.hpp  i_credential_reader.h  i_credential_reader.hpp  i_feedback.h  i_feedback.hpp
access_module/components/portunus_nvs/: CMakeLists.txt
access_module/components/portunus_nvs/include/: portunus_nvs.hpp
access_module/components/portunus_nvs/src/: portunus_nvs.cpp
access_module/components/portunus_proto/: CMakeLists.txt
access_module/components/portunus_types/: CMakeLists.txt
access_module/components/portunus_types/include/: credential_types.h  error_codes.h  error_codes.hpp  event_types.h  event_types.hpp  portunus_types.h  portunus_types.hpp  system_states.h
access_module/components/portunus_types/src/: credential_types.c
access_module/components/proto/: CMakeLists.txt  idf_component.yml
access_module/components/rfid_reader/: CMakeLists.txt
access_module/components/rfid_reader/include/: rfid_reader.h
access_module/components/services/event_bus/: CMakeLists.txt
access_module/components/services/heartbeat_service/: CMakeLists.txt
access_module/components/services/server_comm/: CMakeLists.txt
access_module/components/services/wifi_mgr/: CMakeLists.txt
access_module/components/status_led/: CMakeLists.txt
access_module/components/status_led/include/: status_led.h
access_module/components/system_core/: CMakeLists.txt
access_module/components/system_core/include/: portunus_event.h  portunus_event_bus.h  portunus_module.h  portunus_system_fsm.h
access_module/components/system_core/src/: portunus_system_fsm.cpp
access_module/core/provisioning_fsm/: CMakeLists.txt
access_module/core/provisioning_fsm/include/: provisioning_fsm.h  provisioning_fsm.hpp
access_module/core/provisioning_fsm/src/: provisioning_fsm.cpp
access_module/core/system_fsm/: CMakeLists.txt
access_module/core/system_fsm/include/: system_fsm.h  system_fsm.hpp  system_fsm_decide.hpp
access_module/core/system_fsm/src/: system_fsm.cpp  system_fsm_decide.cpp
access_module/drivers/: README.md
access_module/drivers/access_point_gpio/: CMakeLists.txt
access_module/drivers/access_point_gpio/include/: access_point_gpio.h  access_point_gpio.hpp  door_strike.h  door_strike.hpp  reed_switch.h  reed_switch.hpp
access_module/drivers/access_point_gpio/src/: access_point_gpio.cpp  door_strike.cpp  reed_switch.cpp
access_module/drivers/arm_button_gpio/: CMakeLists.txt
access_module/drivers/arm_button_gpio/include/: arm_button_gpio.h  arm_button_gpio.hpp
access_module/drivers/arm_button_gpio/src/: arm_button_gpio.cpp
access_module/drivers/feedback_led/: CMakeLists.txt
access_module/drivers/feedback_led/include/: feedback_led.h  feedback_led.hpp  led_hal.h  led_hal.hpp
access_module/drivers/feedback_led/src/: feedback_led.cpp  led_hal.cpp
access_module/drivers/reader_mfrc522/: CMakeLists.txt
access_module/drivers/reader_mfrc522/include/: mfrc522.h  mfrc522.hpp  reader_mfrc522.h  reader_mfrc522.hpp
access_module/drivers/reader_mfrc522/src/: mfrc522_hal.cpp  reader_mfrc522.cpp
access_module/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  main.cpp
access_module/scripts/: check_fmt.py  clean.py  proto_gen.py
access_module/services/event_bus/: CMakeLists.txt
access_module/services/event_bus/include/: event_bus.h  event_bus.hpp
access_module/services/event_bus/src/: event_bus.cpp
access_module/services/grpc_client/: CMakeLists.txt  idf_component.yml
access_module/services/grpc_client/include/: grpc_client.h  grpc_client.hpp
access_module/services/grpc_client/src/: grpc_client.cpp
access_module/services/heartbeat_service/: CMakeLists.txt
access_module/services/heartbeat_service/include/: heartbeat_service.h  heartbeat_service.hpp
access_module/services/heartbeat_service/src/: heartbeat_service.cpp
access_module/services/server_comm/: CMakeLists.txt
access_module/services/server_comm/include/: server_comm.h  server_comm.hpp
access_module/services/server_comm/src/: server_comm.cpp
access_module/services/wifi_mgr/: CMakeLists.txt
access_module/services/wifi_mgr/include/: wifi_mgr.hpp
access_module/services/wifi_mgr/src/: wifi_mgr.cpp
access_module/test/host/: CMakeLists.txt  test_credential_types.c  test_system_fsm_decide.cpp
access_module/test/host_idf/: CMakeLists.txt  sdkconfig.defaults
access_module/test/host_idf/main/: CMakeLists.txt  Kconfig.projbuild  test_main.cpp
access_module/test/host_idf/support/: fake_access_point.hpp  fake_clock.hpp  fake_credential_reader.hpp  fake_feedback.hpp  system_fsm_test_fixture.hpp
(+240 files in other folders)
